--- a/css/custom.css
+++ b/css/custom.css
@@ -15,65 +15,118 @@ body {
     z-index: 9;
     background-color:#fff;
 }
-header {
-    position:fixed;
-    top: 0px;
-    width: 100%;
-    height:80px;
-    z-index: 9999;
-    background-color:#fff;
-    width: 100%;
-    box-shadow: 1px 1px 14px 2px #565656;
-
+header{
+    position: relative;
+    height: 80px;
+    background-color: #fff;
 }
-header .logo a {
-    text-transform: uppercase;
+input:focus{
+    outline: none;
+}
+a{
+    cursor: pointer;
+}
+.menu-block{
+    position:fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 80px;
+    box-shadow: 0 2px 3px rgba(0,0,0,0.1);
+    background-color: white;
+}
+.container{
+    max-width:1170px;
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0 auto;
+}
+
+#clean-code .container{
+    overflow: hidden;
+}
+.logo a{
     line-height: 80px;
-    font-size: 26px;
+    font-size: 28px;
     color: #333;
 }
-header .logo a span.b1 {font-weight: 900;}
-header .logo a span.b2 {font-weight:700;}
-header .logo a span.b3 {font-weight:400;}
-header .logo a span.b4 {font-weight:300;}
-header .logo a span.b5 {font-weight:100;}
-header .logo a span {
+.logo a span{
     display: inline-block;
-    padding-right: 18px;
+    padding-right: 12px;
 }
-header .nav{
-    margin-left: 30px;
-    position:relative;
+.logo a span:first-child{
+    font-weight: 900;
 }
-header .navmenu ul{
-    margin: 0px;
-
-
+.logo a span:nth-child(2){
+    font-weight: 700;
 }
-
-header .navmenu ul li {
-    display:inline-block;
+.logo a span:nth-child(3){
+    font-weight: 400;
 }
-header .navmenu ul li a {
-    display:block;
-    margin:0 ;
-    padding:30px 20px;
-    text-transform:uppercase;
-    font-weight:900;
-    line-height:20px;
-    font-size:13px;
-    color:#666;
-    text-decoration: none;
-    transition: all 0.3s ease-in-out;
-
+.logo a span:nth-child(4){
+    font-weight: 300;
 }
-header .navmenu li:hover a,
-header .navmenu li.active a {
+.logo a span:nth-child(4){
+    font-weight: 100;
+}
+#search-form form{
+    position: relative;
+    height: 40px;
+    margin: 20px 0 20px 19px;
+    padding-left: 30px;
+    border-left: 1px solid #ccc;
+    font-family: FontAwesome;
+}
+#search-form form i{
+    font-size: 15px;
+}
+#search-form input{
+    width: 42px;
+    margin: 0;
+    padding: 11px 0;
+    line-height: 20px;
+    font-size: 13px;
+    color: #999;
+    border: 0;
+}
+#search-form input:focus{
+    width: 140px;
+    padding: 11px 20px 11px 0;
+    transition: width linear .3s ;
+}
+a.menu_toggler{
+    float: right;
+    margin: 20px 0 0 20px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 30px;
+    color: #fff;
+    background-color: #333;
+    display: none;
+}
+.navMenu{
+    text-align: center;
+}
+.navMenu ul li{
+    display: inline-block;
+}
+.navMenu ul li a{
+    display: block;
+    margin: 0 0 0 -3px;
+    padding: 30px 20px;
+    font-weight: 900;
+    color: #666;
+    cursor: pointer;
+}
+.navMenu ul li:hover a{
     color:#333;
 }
-header .sub-menu ul {
-    display: none;
-
+.li-sub{
+    position: relative;
+}
+.pages-ul{
+    position: absolute;
     z-index: 9990;
     width: 180px;
     left: 50%;
@@ -81,84 +134,61 @@ header .sub-menu ul {
     padding: 0;
     margin: 0 0 0 -90px;
 }
-header .sub-menu.last ul {right:0; left:auto;}
-header .sub-menu ul:before {
-    content:'';
-    position:absolute;
-    left:50%;
-    top:-6px;
-    margin-left:-5px;
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 7px solid transparent;
-    border-bottom: 6px solid #1c1c1c;
-}
-
-header .sub-menu ul li  {
-    margin:0;
-    padding:0;
-    width:100%;
+.pages-ul li{
+    margin: 0;
+    padding: 0;
+    width: 100%;
     border-top: 0;
 }
-header .sub-menu ul li a {
-    position:relative;
-    margin:0;
+li.li-sub ul li a{
     padding: 15px 5px 14px 21px;
-    font-weight:400;
-    text-align:left;
-    font-size:12px;
-    color:#999 !important;
-    background:#1c1c1c;
-    border-bottom:1px solid #282828;
+    font-weight: 400;
+    text-align: left;
+    font-size: 12px;
+    position: relative;
+    margin: 0;
+    color: #999 !important;
+    background: #1c1c1c;
+    border-bottom: 1px solid #282828;
 }
-header .sub-menu ul li:last-child a {border-bottom:0;}
+.pages-ul{
+    display: none;
+}
+.pages-ul:before{
+    content: "";
+    border-left: 6px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 6px solid black;
+    position: absolute;
+    top: -6px;
+    margin-left: -6px;
+    left:50%;
+    width:0;
+    height: 0;
+}
+.li-sub:hover ul{
+    display: block;
+    animation: opa .5s;
+}
+.navMenu ul .li-sub .pages-ul li a:hover{
+    color: white !important;
+}
 
-header .sub-menu ul li.active a, .sub-menu ul li a:hover {color:#fff !important; background:#161616;}
-
-header #search-form{
-  transition: all 1s ease;
-}
-header #search-form form {
-    position:relative;
-    height:40px;
-    margin:20px 0 20px 19px;
-    padding-left:49px;
-    border-left:1px solid #ccc;
-    font-family: FontAwesome;
-}
-header #search-form form:before {
-    content: "\f002";
-    position:absolute;
-    left:29px;
-    top:-2px;
-    height:40px;
-    line-height:40px;
-    font-size:15px;
-    color:#cccc;
+@keyframes opa{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 
-header #search-form input {
-    width:42px;
-    margin:0;
-    padding:11px 0;
-    text-transform:none;
-    font-family: 'Roboto', sans-serif;
-    font-weight:300;
-    line-height:20px;
-    font-size: 13px;
-    color: #999;
-    background: none;
-    border: 0;
-    box-shadow: none;
-    transition: all 0.3s ease-in-out;
+.zero {
+  display: none!important;
+}
 
-}
-header #search-form input:focus {
-    width:140px;
-    padding: 11px 20px 11px 0;
-    outline: none;
-}
+/*Home*/
+
 
 .accordion i{
   display: none;
@@ -639,32 +669,12 @@ width: 68px;
 line-height: 85px;
 cursor: pointer;
 }
+
 #s6 .wrap .row .icons-container .right-icon:hover {
 border-color: #000;
 color: #000;
 }
-
-
                                                               /*team members*/
-
-/*#s6 .wrap .teamContainer .teamMembers {
-  overflow: hidden;
-  height: 370px;
-  width:  370px;
-  overflow: hidden;
-}
-#s6 .wrap .teamContainer .teamMembers img {
-height: 100%;
-width: 100%;
-background-size: cover;
-}
-#s6 .wrap .teamContainer {
-  overflow: hidden;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}*/
 
 #s6 .wrap .teamContainer {
   overflow: hidden;
